--- a/build.gradle
+++ b/build.gradle
@@ -15,5 +15,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.apache.spark', name: 'spark-sql_2.12', version: '2.4.4'
     compile group: 'org.apache.spark', name: 'spark-core_2.12', version: '2.4.4'
-
+    compile group: 'com.lynden', name: 'GMapsFX', version: '2.12.0'
+    compile group: 'org.openjfx', name: 'javafx', version: '11', ext: 'pom'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.10'
 }
